--- a/Changes
+++ b/Changes
@@ -1,45 +1,42 @@
-2008-09-06
+Revision history for HTML::FormWidgets
 
-	* lib/HTML/FormWidgets.pm:
+0.2.102  16/10/2008
+         - Disabled automated testing
 
-	Tweaked POD. Bumping release to fix broken CPAN Testers database.
+0.2.99   03/10/2008
+         - Bumped revision in POD
 
-2008-08-31
+0.2.97   28/09/2008
+         - Removed dependancy on Readonly
+         - Tweaked for perlcritic
+         - Extra whitespace before widgets
 
-	* lib/HTML/FormWidgets/Chooser.pm:
+         2008-09-23
+         - Refactored the attribute list in the base class. Now distributed
+           amongst the subclasses. Bumping version to 0.2
+           Now uses jscalendar for the Date subclass
 
-	Removed hidden field _verb as unecessary
+         2008-09-06
+         - Tweaked POD. Bumping release to fix broken CPAN Testers database.
 
-2008-08-15
+         2008-08-31
+         - Removed hidden field _verb as unecessary
 
-   * MANIFEST
+         2008-08-15
+         - Removed second SIGNATURE entry
 
-   Removed second SIGNATURE entry
+         2008-07-21
+         - Added support for markdown
 
-2008-07-21
+         2008-06-02
+         - Made version a build requirement
 
-	* lib/HTML/FormWidgets.pm:
+         2008-05-25
+         - Fixed invalid output from anchor and chooser widgets
+           Added POD test
 
-   Added support for markdown
-
-2008-06-02
-
-	* Build.PL:
-
-	Made version a build requirement
-
-2008-05-25
-
-	* lib/HTML/FormWidgets.pm:
-
-	Fixed invalid output from anchor and chooser widgets
-	Added POD test
-
-2008-05-19
-
-	* lib/HTML/FormWidgets.pm (_render):
-
-	Added support form HTML 4.01.
-	Added Cloud subclass
+         2008-05-19
+         - Added support form HTML 4.01.
+           Added Cloud subclass
 
 
